grammar.js
    document: ($) =>
      seq(
        $.magic_number,
        optional($.header_block),
        choice(
          $.record_literal,      // Nickel-style (.k9.ncl)
          $.kennel_body,         // YAML-like (.k9)
        ),
      ),

    // ---------------------------------------------------------------------------
    // Magic number: K9! — mandatory first line identifying the file as K9 format.
    // ---------------------------------------------------------------------------
    magic_number: ($) => /K9!\n/,

    // ---------------------------------------------------------------------------
    // Header block: comment lines after the magic number, before document body.
    // Includes SPDX headers, security level annotations, and documentation.
    // ---------------------------------------------------------------------------
    header_block: ($) =>
      prec.right(repeat1($.header_comment)),

    header_comment: ($) => token(prec(2, /#[^\n]*\n/)),

    // =========================================================================
    // KENNEL-LEVEL SYNTAX (.k9) — YAML-like key-value format
    // =========================================================================

    // ---------------------------------------------------------------------------
    // Kennel body: flat or nested key-value pairs, pedigree blocks, and
    // list items in YAML-like syntax.
    // ---------------------------------------------------------------------------
    record_literal: ($) =>
      seq(
        "{",
        optional($.record_body),
        "}",
      ),

    record_body: ($) =>
      seq(
        $._record_entry,
        repeat(seq(optional(","), $._record_entry)),
        optional(","),
      ),

    _record_entry: ($) =>
      choice(
        $.record_field,
        $.let_binding,
      ),

    // ---------------------------------------------------------------------------
    // Record field: key = value assignment within a record.
    // Supports optional type contracts (| Type) and default values.
    //   name = "my-component",
    //   port | Num = 8080,
    //   target_dir | String | std.string.NonEmpty = "/tmp",
    // ---------------------------------------------------------------------------
    record_field: ($) =>
      seq(
        $.field_name,
        repeat($.type_contract),
        optional(seq("=", $._expression)),
      ),

    // ---------------------------------------------------------------------------
    // Field name: identifier or quoted string used as a record key.
    // ---------------------------------------------------------------------------
    field_name: ($) =>
      choice(
        $.identifier,
        $.string_literal,
      ),

    // ---------------------------------------------------------------------------
    // Type contract: Nickel type annotation using | operator.
    //   | String
    //   | Num
    //   | Bool
    //   | std.string.NonEmpty
    // ---------------------------------------------------------------------------
    type_contract: ($) =>
      seq("|", $.type_expression),

    // ---------------------------------------------------------------------------
    // Type expression: a type name, possibly qualified with module paths.
    // ---------------------------------------------------------------------------
    type_expression: ($) =>
      choice(
        $.builtin_type,
        $.qualified_identifier,
        $.identifier,
      ),

    // ---------------------------------------------------------------------------
    // Built-in types: Nickel primitive types.
    // ---------------------------------------------------------------------------
    builtin_type: ($) =>
      choice("String", "Num", "Bool", "Dyn"),

    // ---------------------------------------------------------------------------
    // Let binding: Nickel let expression for local definitions.
    //   let name = "value" in
    //   let config = { ... } in
    // ---------------------------------------------------------------------------
    let_binding: ($) =>
      seq(
        "let",
        $.identifier,
        optional($.type_contract),
        "=",
        $._expression,
        optional("in"),
      ),

    // ---------------------------------------------------------------------------
    // Expression: any value or computation in the Nickel dialect.
    // Uses explicit precedence levels to avoid ambiguity.
    // ---------------------------------------------------------------------------
    _expression: ($) =>
      choice(
        $._primary_expression,
        $.binary_expression,
        $.if_expression,
        $.function_expression,
        $.import_expression,
      ),

    // ---------------------------------------------------------------------------
    // Primary expression: atomic or grouped expressions.
    // ---------------------------------------------------------------------------
    import_expression: ($) =>
      seq("import", $.string_literal),

    // ---------------------------------------------------------------------------
    // String literal: double or single-quoted strings with escape sequences.
    // ---------------------------------------------------------------------------
    string_literal: ($) =>
      choice(
        seq('"', optional($.string_content), '"'),
      ),

    string_content: ($) =>
      repeat1(
        choice(
          $.string_fragment,
          $.escape_sequence,
          $.string_interpolation,
        ),
      ),

    string_fragment: ($) => token.immediate(prec(1, /[^"\\%]+/)),
    number_literal: ($) => /\-?[0-9]+(\.[0-9]+)?/,

    // ---------------------------------------------------------------------------
    // Boolean literal: true or false.
    // ---------------------------------------------------------------------------
    boolean_literal: ($) => choice("true", "false"),

    // ---------------------------------------------------------------------------
    // Null literal: null value.
    // ---------------------------------------------------------------------------
    trust_level: ($) =>
      token(prec(2, choice(
        "'Kennel",
        "'Yard",
        "'Hunt",
      ))),

    // ---------------------------------------------------------------------------
    // Enum tag: generic Nickel enum variant (beyond trust levels).
    // ---------------------------------------------------------------------------
    array_literal: ($) =>
      seq(
        "[",
        optional(
          seq(
            $._expression,
            repeat(seq(",", $._expression)),
            optional(","),
          ),
        ),
        "]",
      ),

    // ---------------------------------------------------------------------------
    // Identifier: variable or field name.
    // ---------------------------------------------------------------------------
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_\-]*/,

    // ---------------------------------------------------------------------------
    // Qualified identifier: dotted path for module access.
    //   std.string.NonEmpty
    //   config.target_dir
    // ---------------------------------------------------------------------------
