test/corpus/magic_number.txt
================================================================================
K9 magic number with Nickel record
================================================================================

K9!
# SPDX-License-Identifier: MPL-2.0
{
  name = "test",
}

--------------------------------------------------------------------------------

(document
  (magic_number)
  (header_block
    (header_comment))
  (record_literal
    (record_body
      (record_field
        (field_name
          (identifier))
        (string_literal
          (string_content
            (string_fragment)))))))
