test/corpus/trust_levels.txt
================================================================================
Trust level enum tags
================================================================================

K9!
{
  leash = 'Kennel,
}

--------------------------------------------------------------------------------

(document
  (magic_number)
  (record_literal
    (record_body
      (record_field
        (field_name
          (identifier))
        (trust_level)))))
